force-app/main/default/objects/SVMXA360__ApplicationLog__c/SVMXA360__ApplicationLog__c.object-meta.xml
<CustomObject>
    <description>Logs can be captured in the application log object.</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Application Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>