force-app/main/default/objects/SVMXA360__ApplicationLog__c/fields/SVMXA360__ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplicationName__c</fullName>
    <description>Name of the application for which the log is created.</description>
    <label>Application Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>PostInstallScript</fullName>
                <label>Post Install Script</label>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>