force-app/main/default/objects/SVMXA360__ApplicationLog__c/fields/SVMXA360__LogType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LogType__c</fullName>
    <description>Type of application log. For example, Debug, Info, Warning, or Error.</description>
    <label>Log Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>