force-app/main/default/objects/SVMXA360__ApplicationLog__c/fields/SVMXA360__Message__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Message__c</fullName>
    <description>Application log message.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>