force-app/main/default/objects/SVMXA360__ApplicationLog__c/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Context user ID for the application log.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>